--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -40,3 +40,20 @@
   border-radius: 8px;
   cursor: pointer;
 }
+.switch-text {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #555;
+  text-align: center;
+}
+
+.switch-link {
+  color: #4b0082;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.switch-link:hover {
+  text-decoration: underline;
+}
+
